# Scaler-project

./: .gitignore  hackathon_rl_guide.md  implementation_plan.md  rl_complete_guide.md  rule.md
db_surgeon/: HF_GUIDE.md  PROJECT_GUIDE.md  README.md  __init__.py  check_status.py  client.py  colab_training.py  deploy_to_hf.py  models.py  openenv.yaml  pyproject.toml  setup_gpu_and_train.py
db_surgeon/examples/: baseline_random.py  example_episode.py
db_surgeon/hf_space/: README.md  app.py  requirements.txt  unified_pipeline.py
db_surgeon/metrics/: plot_rewards.py
db_surgeon/server/: Dockerfile  __init__.py  app.py  broken_db_generator.py  db_manager.py  db_surgeon_environment.py  evaluation_oracle.py  requirements.txt  reward.py
db_surgeon/training/: __init__.py  dataset.py  evaluate.py  reward_functions.py  tool_env.py  train_grpo.py  train_unsloth.py
metrics/results/: baseline_random.json
