[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "db-surgeon-env"
version = "0.1.0"
description = "DB-Surgeon: An OpenEnv RL environment for database schema debugging and repair"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "DB-Surgeon Team"},
]

dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
training = [
    "trl>=0.15.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "peft>=0.12.0",
]
unsloth = [
    "unsloth",
]
demo = [
    "gradio>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
include = ["db_surgeon*"]
